ApplicationService fix + Unit tests wip